--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <div class="sidebar">
         <div class="logo-content">
             <div class="logo">
-                <i class='bx bxl-google'></i>
+                <!-- <i class='bx bxl-google'></i> -->
+                <i class="fab fa-google"></i>
                 <div class="logo-name">mail</div>
                 <!-- <img class="img-logo" src="/img/logo-gmail.png" alt="">               -->
             </div>
