--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <ul class="nav-list">
            
             <li>
-                <i class='bx bxl-google' onclick="btnRedactar()"></i>
+                <i class='fab fa-google' onclick="btnRedactar()"></i>
                 <!-- <i class='bx bx-search' ></i> -->
                <button class="btn btn-redactar" onclick="btnRedactar()">Redactar</button>                
                  <span class="tooltip">Redactar</span>
