--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
             <div class="container-fluid">
               <a class="navbar-brand logo-name" href="#">
                 <img src="/img/logo-gmail.png" alt="" class="d-inline-block align-text-top">
-                <i class='bx bx-search' ></i>
+                <!-- <i class='bx bx-search' ></i> -->
+                <i class="fas fa-search"></i>
                 <input type="text" placeholder="Buscar Correo">                
                   <!-- <span class="tooltip">Search</span> -->
                 </a>
